--- a/Pizzazo/src/main/resources/application.properties
+++ b/Pizzazo/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.generate-ddl=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 server.port=8080
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/pizzazo?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:pizzazo}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.initialization-mode=always
 spring.sql.init.mode=always
 spring.jpa.database=mysql
-spring.datasource.platform=mysql
+spring.sql.init.platform=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
